Restructure settings for different types of runs, trajectory end number fix, cpu kernel improvement and cache

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,10 +12,10 @@
             "console": "integratedTerminal"
         },
         {
-            "name": "Python Debugger: MandeBrot.py",
+            "name": "Python Debugger: mandelbrot_zoom.py",
             "type": "debugpy",
             "request": "launch",
-            "program": "MandelBrot.py",
+            "program": "mandelbrot_zoom.py",
             "console": "integratedTerminal"
         },
     ]
